final changes to improve interactivity for users

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,9 +16,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-5 col-md-6">
-            <h1>Good Food Choise Are Good Health...</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, provident. Ipsa ipsam nisi ut ducimus
-              consectetur molestiae molesti</p>
+            <h1>Choosing nutritious foods promotes good health...</h1>
+            <p>Our diverse menu caters to all dietary preferences, ensuring there's something for everyone. Experience the convenience and satisfaction of our prompt delivery service.</p>
             <div class="mt-4">
               <button class="main-btn">Order now <i class="fas fa-shopping-basket ps-3"></i></button>
               <button class="white-btn">Order now <i class="fas fa-angle-right ps-3"></i></button>
@@ -70,8 +69,8 @@
           <img src="/static/image/img/img-1.png" class="img-fluid py-2" alt="">
         </div>
         <div class="col-md-5 mt-md-5 mt-1">
-          <h2>We Pride Outserves On Making Real Food The Best Ingredients.</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora eligendi adipisci commodi ullam,</p>
+          <h2>We take pride in sourcing the freshest and highest quality ingredients.</h2>
+          <p>Our secret ingredients for every dish are the perfect blend of nutrition, health, and a generous sprinkle of love. We believe that food is not just sustenance, but a way to nourish both body and soul. Experience the wholesome goodness and passion we put into every meal we deliver.</p>
           <button class="main-btn">Learn More</button>
         </div>
       </div>
@@ -82,12 +81,11 @@
     <div class="row">
       <div class="col-md-5 mt-md-5 pt-md-5">
         <h2>We Make Everything By Hand With The Best Possible Ingredients.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum non enim, error laudantium voluptatem, facilis
-          facere necessitatibus cupiditate ullam quod unde soluta molestiae optio consequuntur!</p>
+        <p>At our food delivery site, we take pride in crafting each dish by hand with meticulous attention to detail. From the homemade sauces to the hand-rolled dough, our commitment to handmade perfection ensures a truly authentic and flavorful dining experience. Taste the difference that our handcrafted meals bring to your table.</p>
         <div class="checks">
-          <span><i class="fa fa-check"></i> Lorem ipsum dolor sit amet.</span><br>
-          <span><i class="fa fa-check"></i> Lorem ipsum dolor amet.</span><br>
-          <span><i class="fa fa-check"></i> Lorem ipsum dolor sit amet.</span>
+          <span><i class="fa fa-check"></i> Artisanal Elixirs.</span><br>
+          <span><i class="fa fa-check"></i> Gourmet Infusions .</span><br>
+          <span><i class="fa fa-check"></i> Handcrafted Culinary Magic.</span>
         </div>
         <button class="main-btn">Learn More</button>
       </div>
@@ -101,9 +99,7 @@
     <section class="container my-5">
       <div class="text-center mx-md-5 px-md-5">
         <h2 class="pb-0 mb-0">Explore Our Foods</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores fugiat quidem facilis enim aliquam
-          possimus ipsa, minus suscipit rerum molestiae recusandae. Tempore neque, provident id veniam consectetur
-          soluta repudiandae rerum?</p>
+        <p>Introducing our menu highlights, where the most ordered and highly acclaimed dishes take center ,These crowd favorites are just a glimpse into the culinary delights that await you on our menu.</p>
       </div>
       <div class="row my-5 ">
         <div class="col-md-4">
@@ -111,8 +107,8 @@
             <img src="/static/image/img/img-3.jpg" class="img-fluid mb-2" alt="">
             <h4>Rainbow Vegetable Sandwich</h4>
             <p class="text-color">Time : 15-20 Minutes | Server 1</p>
-            <h2 class="primary-color mb-3"> <i class="fa fa-usd"></i>10.50 <del class="text-muted"><i
-                  class="fa fa-usd"></i>11.70</del></h2>
+            <h2 class="primary-color mb-3"> <i class="fa fa-rupee"></i>10.50 <del class="text-muted"><i
+                  class="fa fa-rupee"></i>11.70</del></h2>
             <div>
               <button class="main-btn">Order Now</button>
             </div>
@@ -123,8 +119,8 @@
             <img src="/static/image/img/img-4.jpg" class="img-fluid mb-2" alt="">
             <h4>Vegeterian Burger</h4>
             <p class="text-color">Time : 30-35 Minutes | Server 1</p>
-            <h2 class="primary-color mb-3"> <i class="fa fa-usd"></i>9.50 <del class="text-muted"><i
-                  class="fa fa-usd"></i>10.50</del></h2>
+            <h2 class="primary-color mb-3"> <i class=" fa fa-rupee"></i>9.50 <del class="text-muted"><i
+                  class=" fa fa-rupee"></i>10.50</del></h2>
             <div>
               <button class="main-btn">Order Now</button>
             </div>
@@ -135,8 +131,8 @@
             <img src="/static/image/img/img-5.jpg" class="img-fluid mb-2" alt="">
             <h4>Raspberry Stuffed French Toast</h4>
             <p class="text-color">Time : 15-20 Minutes | Server 1</p>
-            <h2 class="primary-color mb-3"> <i class="fa fa-usd"></i>7.30 <del class="text-muted"><i
-                  class="fa fa-sd"></i>10.70</del></h2>
+            <h2 class="primary-color mb-3"> <i class=" fa fa-rupee"></i>7.30 <del class="text-muted"><i
+                  class=" fa fa-rupee"></i>10.70</del></h2>
             <div>
               <button class="main-btn">Order Now</button>
             </div>
@@ -163,16 +159,14 @@
             <img style="width:150px;height:auto;border-radius:50%" src="/static/image/review/review-1.jpg" alt="...">
             <div class="my-4">
               <h4 class="">John K Leone</h4>
-              <p class="text-light">Some representative placeholder content for the first slide Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Nesciunt perferendis qui exercitationem deleniti sed obcaecati..</p>
+              <p class="text-light">"I have been ordering from this online food delivery site for months now, and I must say, they never disappoint. The food always arrives fresh, hot, and packed with flavor. It's like having a gourmet restaurant experience right at my doorstep!.".</p>
             </div>
           </div>
           <div class="carousel-item text-center ">
             <img style="width:150px;height:auto; border-radius:50%" src="/static/image/review/review-2.jpg" alt="...">
             <div class="my-4">
               <h4 class="">Nancy Whiller</h4>
-              <p class="text-light">Some representative placeholder content for the first slide Lorem ipsum dolor sit amet consectetur
-                deleniti Lorem, ipsum dolor sit amet consectetur adipisicing elit. sed obcaecati..</p>
+              <p class="text-light">"I highly recommend this online food delivery site! Their diverse menu options cater to all my dietary preferences, and the quality of the ingredients truly shines through in every bite. Plus, their prompt and efficient delivery service makes it incredibly convenient. It's my go-to choice for delicious meals without the hassle of cooking."</p>
             </div>
           </div>
 
@@ -217,11 +211,7 @@
   <section id="footer">
 
     <div class="text-center">
-      <a href="">Resiter</a>
-      <a href="">Forum</a>
-      <a href="">Affilate</a>
-      <a href="">FAQ</a><br>
-      <small class="mt-5 text-light">@ 2022. Foodie. All rights reserved.</small>
+      <small class="mt-5 text-light">@ 2023. Foodie. All rights reserved.</small>
     </div>
   </section>
 
